# paip

./: .editorconfig  .taplo.toml  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  README.md  config.schema.json  config.toml  config.yaml
.github/workflows/: lint.yaml  release.yaml  release.yml
src/: cli.rs  config.rs  llm.rs  main.rs
