[package]
name = "paip"
version = "1.1.0"
edition = "2024"

authors = ["Stipe Kotarac <stipe@kotarac.net>"]
license = "GPL-2.0-only"
description = "like cat but through llm"

homepage = "https://github.com/kotarac/paip"
repository = "https://github.com/kotarac/paip"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"], default-features = false }
anyhow = "1.0.98"
dirs = "6.0.0"
serde_json = "1.0.142"
toml = "0.9.4"

[dev-dependencies]
tempfile = "3.20.0"
