[package]
name = "paip"
version = "1.2.0"
edition = "2024"

authors = ["Stipe Kotarac <stipe@kotarac.net>"]
license = "GPL-2.0-only"
description = "like cat but through llm"

homepage = "https://github.com/kotarac/paip"
repository = "https://github.com/kotarac/paip"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.26", features = ["json", "blocking", "rustls-tls"], default-features = false }
anyhow = "1.0.100"
dirs = "6.0.0"
serde_json = "1.0.145"
toml = "0.9.9"

[dev-dependencies]
tempfile = "3.23.0"
